--- a/README
+++ b/README
@@ -8,4 +8,4 @@ TODO:
 -test busy tone to work with fifo queue (automatic test)
 -finish call flowchart diagram & send to Math
 +check whether caller is removed from sql skinny_active_lines, once callee does not answer
--caller_id once tranfer
+-caller_id once tranfer call is wrong
